fix infinite scroll for small pages
keep loading pages until loader is out of viewport

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -85,6 +85,10 @@ header {
   }
 }
 
+#infinite-loader {
+  transform: translateY(-200px);
+}
+
 footer {
   margin-top: 1rem;
   text-align: center;
